Fix issue with not visible switcher on firefox

--- a/apps/www/components/headers/navigationHeader/darkModeSwitcher/darkModeSwitcher.module.scss
+++ b/apps/www/components/headers/navigationHeader/darkModeSwitcher/darkModeSwitcher.module.scss
@@ -16,6 +16,7 @@
     left: 0;
     height: 100%;
     width: 100%;
+    appearance: none;
     &::before {
       content: '';
       position: absolute;
